[gd_scene load_steps=5 format=3 uid="uid://boxw8nhvi4650"]

[ext_resource type="Script" path="res://Scripts/SwordClickSwing.gd" id="1_ui1hg"]
[ext_resource type="Texture2D" uid="uid://bd3kdfc1vg2wn" path="res://Sprites/bigolsword3.png" id="2_0dm3p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_53oqm"]
size = Vector2(19.25, 5.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8pa6w"]
size = Vector2(20, 10)

[node name="SwordClickSwing" type="Node2D" node_paths=PackedStringArray("rotationPoint")]
script = ExtResource("1_ui1hg")
rotationPoint = NodePath("RotationPoint")

[node name="RotationPoint" type="Node2D" parent="."]
position = Vector2(-13.06, 0)

[node name="SwordBody" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="SwordBody"]
rotation = 1.5708
texture = ExtResource("2_0dm3p")
centered = false
offset = Vector2(-16.215, -28.68)

[node name="Area2D" type="Area2D" parent="SwordBody"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordBody/Area2D"]
position = Vector2(15.505, 0)
shape = SubResource("RectangleShape2D_53oqm")

[node name="JustTheTip" type="CollisionShape2D" parent="SwordBody/Area2D"]
position = Vector2(26.205, -0.2)
scale = Vector2(0.05, 0.2)
shape = SubResource("RectangleShape2D_8pa6w")

[node name="SwingTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="body_entered" from="SwordBody/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="SwordBody/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="SwingTimer" to="." method="_on_click_timer_timeout"]
